Fixed field to be visible while dragging

--- a/src/components/ls-toolbox-field/ls-toolbox-field.scss
+++ b/src/components/ls-toolbox-field/ls-toolbox-field.scss
@@ -8,6 +8,11 @@
   border: 1px solid $gray-20;
   background: white;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.06), 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+  cursor: grab;
+}
+
+.ls-dv-toolbox-field:active {
+  cursor: grabbing;
 }
 
 .ls-dv-toolbox-field:hover {
